add supporting mixed composition status types in contribution