@@ -17,21 +17,23 @@
  */
 package org.ehrbase.client.openehrclient.defaultrestclient;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.ehrbase.client.TestData.buildProxyEhrbaseBloodPressureSimpleDeV0Composition;
 import static org.ehrbase.test_data.contribution.ContributionTestDataCanonicalJson.*;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
+import com.nedap.archie.rm.RMObject;
 import com.nedap.archie.rm.changecontrol.Contribution;
 import com.nedap.archie.rm.changecontrol.OriginalVersion;
 import com.nedap.archie.rm.composition.Composition;
 import com.nedap.archie.rm.ehr.EhrStatus;
 import com.nedap.archie.rm.generic.AuditDetails;
+import com.nedap.archie.rm.support.identification.ObjectVersionId;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import org.apache.commons.io.IOUtils;
@@ -53,20 +55,12 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
-/**
- * The type Default rest contribution endpoint it.
- */
 @Category(Integration.class)
 public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQueryIT {
 
     private static OpenEhrClient openEhrClient;
     private UUID ehr;
 
-    /**
-     * Sets .
-     *
-     * @throws URISyntaxException the uri syntax exception
-     */
     @BeforeClass
     public static void setup() throws URISyntaxException {
         openEhrClient = DefaultRestClientTestHelper.setupDefaultRestClient();
@@ -78,11 +72,6 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
         openEhrClient.adminEhrEndpoint().delete(ehr);
     }
 
-    /**
-     * Test save and get contribution.
-     *
-     * @throws IOException the io exception
-     */
     @Test
     public void testSaveAndGetContribution() throws IOException {
         ehr = openEhrClient.ehrEndpoint().createEhr();
@@ -91,184 +80,335 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
         ContributionCreateDto contributionDto =
                 new CanonicalJson().unmarshal(contribution, ContributionCreateDto.class);
 
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(
-                ehr,
-                contributionEndpoint.mergeContributionEntity(contributionDto).getUuid());
+        VersionUid contributionEntity =
+                openEhrClient.contributionEndpoint(ehr).mergeContributionEntity(contributionDto);
+
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, contributionEntity.getUuid());
 
         assertTrue(remoteContribution.isPresent());
     }
 
-    /**
-     * Test save ehr status contribution modification.
-     *
-     * @throws IOException the io exception
-     */
     @Test
     public void testSaveContributionEhrStatusModification() throws IOException {
         ehr = openEhrClient.ehrEndpoint().createEhr();
+
         Optional<EhrStatus> ehrStatus = openEhrClient.ehrEndpoint().getEhrStatus(ehr);
 
         assertTrue(ehrStatus.isPresent());
 
         ContributionCreateDto contributionDto = createContributionWithEhrStatus(ehrStatus.get());
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid = contributionEndpoint.mergeContributionEntity(contributionDto);
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
+
+        VersionUid versionUid = openEhrClient.contributionEndpoint(ehr).mergeContributionEntity(contributionDto);
+
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
 
         assertTrue(remoteContribution.isPresent());
     }
 
-    /**
-     * Test save contribution with canonical composition modification.
-     *
-     * @throws IOException the io exception
-     */
     @Test
-    @SuppressWarnings("unchecked")
-    public void testSaveContributionWithCompositionModification() throws IOException {
+    public void testSaveContributionWithCompositionsCreationModification() throws IOException {
         ehr = openEhrClient.ehrEndpoint().createEhr();
-        String compositionPrecedingVersionUid = getCompositionPrecedingVersionUid(ehr);
 
-        String contributionModificationJson =
-                IOUtils.toString(ONE_ENTRY_COMPOSITION_MODIFICATION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDto =
-                new CanonicalJson().unmarshal(contributionModificationJson, ContributionCreateDto.class);
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion =
-                (OriginalVersion<LinkedHashMap<String, Object>>)
-                        contributionDto.getVersions().get(0);
+        // Save first composition
+        Unflattener unflattener = new Unflattener(new TestDataTemplateProvider());
+        Composition rmCompositionResponse =
+                (Composition) unflattener.unflatten(mergeMinimalEvaluationEnV1Composition());
+        LinkedHashMap<String, Object> composition = getCanonicalComposition(rmCompositionResponse);
 
-        LinkedHashMap<String, Object> composition = originalVersion.getData();
-
-        AuditDetails compositionModificationAudit =
-                contributionDto.getVersions().get(0).getCommitAudit();
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(compositionModificationAudit)
-                .addCompositionModification(composition, compositionPrecedingVersionUid)
-                .build();
-
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-
-        assertThat(versionUid.getVersion()).isEqualTo(1L);
-
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
-
-        assertTrue(remoteContribution.isPresent());
-    }
-
-    /**
-     * Test save contribution with canonical composition deletion.
-     *
-     * @throws IOException the io exception
-     */
-    @Test
-    @SuppressWarnings("unchecked")
-    public void testSaveContributionWithCompositionDeletion() throws IOException {
-        ehr = openEhrClient.ehrEndpoint().createEhr();
-        String compositionPrecedingVersionUid = getContributionCompositionModified(ehr);
-
-        String contributionModificationJson =
-                IOUtils.toString(ONE_ENTRY_COMPOSITION_DELETION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDto =
-                new CanonicalJson().unmarshal(contributionModificationJson, ContributionCreateDto.class);
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion =
-                (OriginalVersion<LinkedHashMap<String, Object>>)
-                        contributionDto.getVersions().get(0);
-
-        LinkedHashMap<String, Object> composition = originalVersion.getData();
-
-        AuditDetails compositionModificationAudit =
-                contributionDto.getVersions().get(0).getCommitAudit();
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(compositionModificationAudit)
-                .addCompositionDeletion(composition, compositionPrecedingVersionUid)
-                .build();
-
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-
-        assertThat(versionUid.getVersion()).isEqualTo(1L);
-
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
-
-        assertTrue(remoteContribution.isPresent());
-        String version = remoteContribution.get().getVersions().get(0).getId().getValue();
-        String updatedVersion = version.substring(version.lastIndexOf("::") + 2);
-
-        assertEquals("3", updatedVersion);
-    }
-
-    /**
-     * Test save contribution created with rm object composition.
-     *
-     * @throws IOException the io exception
-     */
-    @Test
-    public void testSaveContributionCreatedWithRMObjectComposition() throws IOException {
-
-        ehr = openEhrClient.ehrEndpoint().createEhr();
         Unflattener cut = new Unflattener(new TestDataTemplateProvider());
 
         ProxyEhrbaseBloodPressureSimpleDeV0Composition proxyDto = buildProxyEhrbaseBloodPressureSimpleDeV0Composition();
 
-        ProxyEhrbaseBloodPressureSimpleDeV0Composition comp =
+        // Save second composition
+        ProxyEhrbaseBloodPressureSimpleDeV0Composition proxyComposition =
                 openEhrClient.compositionEndpoint(ehr).mergeCompositionEntity(proxyDto);
 
-        assertThat(comp.getVersionUid()).isNotNull();
+        //  getting WARN because of Rm Object uses kryo for copy objects
+        //  Look like the same issue is here and still not fixed https://github.com/EsotericSoftware/kryo/issues/626
+        // WARNING: An illegal reflective access operation has occurred
+        // WARNING: Illegal reflective access by com.esotericsoftware.kryo.kryo5.unsafe.UnsafeUtil
+        // (file:..m2/repository/com/esotericsoftware/kryo/kryo5/5.3.0/kryo5-5.3.0.jar) to constructor java.nio.DirectByteBuffer(long,int)
+        // WARNING: Please consider reporting this to the maintainers of
+        // com.esotericsoftware.kryo.kryo5.unsafe.UnsafeUtil
+        // WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+        // WARNING: All illegal access operations will be denied in a future release
 
-        AuditDetails auditDetails = getAuditDetails();
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(auditDetails)
-                .addCompositionCreation(cut.unflatten(comp))
+        Composition unflattenSecondComposition = (Composition) cut.unflatten(proxyComposition);
+        // Create contribution
+        ContributionBuilder contributionBuilder = ContributionBuilder.builder(createAuditDetails())
+                .addCompositionCreation(composition)
+                .addCompositionCreation(composition)
+                .addCompositionCreation(composition)
+                //                .addCompositionModification(composition) // can't modify same composition twice in one
+                // request because version is chaning in each operation
+                .addCompositionModification(composition)
+                .addCompositionModification(
+                        unflattenSecondComposition,
+                        proxyComposition.getVersionUid().toString())
                 .build();
 
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
+        // Save Contribution
         VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
+                openEhrClient.contributionEndpoint(ehr).mergeContributionEntity(contributionBuilder.getContribution());
+
+        // Find Contribution
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
+
+        long expectedCompositionsCreatedTimes = 3L;
+        long expectedCompositionsModifiedTimes = 2L;
 
         assertTrue(remoteContribution.isPresent());
+        assertEquals(
+                expectedCompositionsCreatedTimes,
+                countNumberOfChangedCompositionsByVersion(remoteContribution.get(), "1"));
+        assertEquals(
+                expectedCompositionsModifiedTimes,
+                countNumberOfChangedCompositionsByVersion(remoteContribution.get(), "2"));
     }
 
-    /**
-     * Test save contribution canonical entity created by builder.
-     *
-     * @throws IOException the io exception
-     */
+    private static long countNumberOfChangedCompositionsByVersion(Contribution remoteContribution, String version) {
+        return remoteContribution.getVersions().stream()
+                .filter(objectRef -> version.equals(objectRef
+                        .getId()
+                        .getValue()
+                        .substring(objectRef.getId().getValue().lastIndexOf("::") + 2)))
+                .count();
+    }
+
     @Test
-    @SuppressWarnings("unchecked")
-    public void testSaveContributionWithOriginalVersion() throws IOException {
+    public void testSaveContributionWithCompositionCreationModificationDeletion() throws IOException {
         ehr = openEhrClient.ehrEndpoint().createEhr();
 
-        String contributionJson = IOUtils.toString(ONE_ENTRY_COMPOSITION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDto =
-                new CanonicalJson().unmarshal(contributionJson, ContributionCreateDto.class);
+        // Save composition
+        Unflattener unflattener = new Unflattener(new TestDataTemplateProvider());
+        Composition rmCompositionResponse =
+                (Composition) unflattener.unflatten(mergeMinimalEvaluationEnV1Composition());
+        LinkedHashMap<String, Object> composition = getCanonicalComposition(rmCompositionResponse);
+        AuditDetails audit = createAuditDetails();
 
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion =
-                (OriginalVersion<LinkedHashMap<String, Object>>)
-                        contributionDto.getVersions().get(0);
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(contributionDto.getAudit())
-                .addOriginalVersionCreation(originalVersion)
+        // 2 Create contribution with composition modification
+        ContributionBuilder contributionBuilderCompositionModification = ContributionBuilder.builder(audit)
+                .addCompositionModification(composition)
                 .build();
 
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
+        // 3 Save Contribution
+        VersionUid versionUid = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionModification.getContribution());
 
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
+        // 4 Find Contribution
+        Optional<Contribution> remoteContribution_ =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
+        assertTrue(remoteContribution_.isPresent());
+
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("2", getCompositionVersion(remoteContribution_.get()));
+
+        // 5 Replace composition version
+        changeToLatestCompositionVersion(composition, remoteContribution_.get());
+
+        // 6 Create contribution with composition deletion
+        ContributionBuilder contributionBuilderCompositionDeletion = ContributionBuilder.builder(audit)
+                .addCompositionDeletion(composition)
+                .build();
+
+        // 7 Save Contribution
+        VersionUid versionUid1 = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionDeletion.getContribution());
+
+        // 8 Find Contribution
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid1.getUuid());
 
         assertTrue(remoteContribution.isPresent());
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("3", getCompositionVersion(remoteContribution.get()));
     }
 
-    /**
-     * Test save contribution with compositions creation.
-     *
-     * @throws IOException the io exception
-     */
+    @Test
+    public void testSaveContributionWithCompositionCreationModificationDeletion1() throws IOException {
+        ehr = openEhrClient.ehrEndpoint().createEhr();
+
+        // 1 Save composition
+        Unflattener unflattener = new Unflattener(new TestDataTemplateProvider());
+        Composition rmCompositionResponse =
+                (Composition) unflattener.unflatten(mergeMinimalEvaluationEnV1Composition());
+        LinkedHashMap<String, Object> composition = getCanonicalComposition(rmCompositionResponse);
+        AuditDetails audit = createAuditDetails();
+
+        // 2 Create contribution with composition modification
+        ContributionBuilder contributionBuilderCompositionModification = ContributionBuilder.builder(audit)
+                .addCompositionCreation(composition)
+                .build();
+
+        // 3 Save Contribution
+        VersionUid versionUid = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionModification.getContribution());
+
+        // 4 Find Contribution
+        Optional<Contribution> remoteContribution_ =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
+        assertTrue(remoteContribution_.isPresent());
+
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("1", getCompositionVersion(remoteContribution_.get()));
+
+        // 5 Get previous composition id
+        String compositionPrecedingVersionUid =
+                remoteContribution_.get().getVersions().get(0).getId().getValue();
+
+        // 6 Create contribution with composition modification
+        ContributionBuilder contributionBuilderCompositionModifiation = ContributionBuilder.builder(audit)
+                .addCompositionModification(composition, compositionPrecedingVersionUid)
+                .build();
+
+        // 7 Save Contribution
+        VersionUid versionUid1 = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionModifiation.getContribution());
+
+        // 8 Find Contribution
+        Optional<Contribution> remoteContribution_1 =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid1.getUuid());
+        assertTrue(remoteContribution_1.isPresent());
+
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("2", getCompositionVersion(remoteContribution_1.get()));
+
+        // 9 Get previous composition id
+        String compositionPrecedingVersionUid1 =
+                remoteContribution_1.get().getVersions().get(0).getId().getValue();
+
+        // 10 Create contribution with composition deletion
+        ContributionBuilder contributionBuilderCompositionDeletion1 = ContributionBuilder.builder(audit)
+                .addCompositionDeletion(composition, compositionPrecedingVersionUid1)
+                .build();
+
+        // 11 Save Contribution
+        VersionUid versionUid12 = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionDeletion1.getContribution());
+
+        // 12 Find Contribution
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid12.getUuid());
+
+        assertTrue(remoteContribution.isPresent());
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("3", getCompositionVersion(remoteContribution.get()));
+    }
+
+    @Test
+    public void testSaveDefaultContributionWithRMCompositionCreationModificationDeletion() throws IOException {
+        ehr = openEhrClient.ehrEndpoint().createEhr();
+
+        // 1 Save composition
+        Unflattener unflattener = new Unflattener(new TestDataTemplateProvider());
+        Composition rmCompositionResponse =
+                (Composition) unflattener.unflatten(mergeMinimalEvaluationEnV1Composition());
+        AuditDetails audit = createAuditDetails();
+
+        // 2 Create contribution with composition modification
+        ContributionBuilder contributionCompositionModified = ContributionBuilder.builder(audit)
+                .addCompositionModification(rmCompositionResponse)
+                .build();
+
+        // 3 Save Contribution
+        VersionUid versionUid = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionCompositionModified.getContribution());
+
+        // 4 Find Contribution
+        Optional<Contribution> remoteContribution_ =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
+        assertTrue(remoteContribution_.isPresent());
+
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("2", getCompositionVersion(remoteContribution_.get()));
+
+        // 5 Replace composition version
+        String compositionPrecedingVersionUid =
+                remoteContribution_.get().getVersions().get(0).getId().getValue();
+        rmCompositionResponse.setUid(new ObjectVersionId(compositionPrecedingVersionUid));
+
+        // 6 Create contribution with composition deletion
+        ContributionBuilder contributionBuilderCompositionDeletion = ContributionBuilder.builder(audit)
+                .addCompositionDeletion(rmCompositionResponse)
+                .build();
+
+        // 7 Save Contribution
+        VersionUid versionUid1 = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionDeletion.getContribution());
+
+        // 8 Find Contribution
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid1.getUuid());
+
+        assertTrue(remoteContribution.isPresent());
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("3", getCompositionVersion(remoteContribution.get()));
+    }
+
+    @Test
+    public void testSaveContributionWithRMCompositionCreationModificationDeletion() throws IOException {
+        ehr = openEhrClient.ehrEndpoint().createEhr();
+        String compositionPrecedingVersionUid;
+
+        // 1 Save composition
+        Unflattener unflattener = new Unflattener(new TestDataTemplateProvider());
+        Composition rmCompositionResponse =
+                (Composition) unflattener.unflatten(mergeMinimalEvaluationEnV1Composition());
+        AuditDetails audit = createAuditDetails();
+
+        compositionPrecedingVersionUid = rmCompositionResponse.getUid().getValue();
+
+        // 2 Create contribution with composition modification
+        ContributionBuilder contributionCompositionModified = ContributionBuilder.builder(audit)
+                .addCompositionModification(rmCompositionResponse, compositionPrecedingVersionUid)
+                .build();
+
+        // 3 Save Contribution
+        VersionUid versionUid = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionCompositionModified.getContribution());
+
+        // 4 Find Contribution
+        Optional<Contribution> remoteContribution_ =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid.getUuid());
+        assertTrue(remoteContribution_.isPresent());
+
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("2", getCompositionVersion(remoteContribution_.get()));
+
+        // 5 Get previous composition id
+        compositionPrecedingVersionUid =
+                remoteContribution_.get().getVersions().get(0).getId().getValue();
+
+        // 6 Create contribution with composition deletion
+        ContributionBuilder contributionBuilderCompositionDeletion = ContributionBuilder.builder(audit)
+                .addCompositionDeletion(rmCompositionResponse, compositionPrecedingVersionUid)
+                .build();
+
+        // 7 Save Contribution
+        VersionUid versionUid1 = openEhrClient
+                .contributionEndpoint(ehr)
+                .mergeContributionEntity(contributionBuilderCompositionDeletion.getContribution());
+
+        // 8 Find Contribution
+        Optional<Contribution> remoteContribution =
+                openEhrClient.contributionEndpoint(ehr).find(ehr, versionUid1.getUuid());
+
+        assertTrue(remoteContribution.isPresent());
+        assertEquals(1L, getContributionVersion(versionUid));
+        assertEquals("3", getCompositionVersion(remoteContribution.get()));
+    }
+
     @Test
     public void testSaveContributionWithCompositionsCreation() throws IOException {
 
@@ -285,7 +425,7 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
         LinkedHashMap<String, Object> secondComposition =
                 (LinkedHashMap<String, Object>) new CanonicalJson().unmarshalToMap(composition);
 
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion = new OriginalVersion<>();
+        OriginalVersion<Map<String, Object>> originalVersion = new OriginalVersion<>();
         originalVersion.setData(secondComposition);
 
         String contributionJson =
@@ -295,119 +435,44 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
 
         ContributionBuilder contributionBuilder = ContributionBuilder.builder(contributionDto.getAudit())
                 .addCompositionCreation(proxyComposition)
-                .addCompositionCreation(proxyComposition)
-                .addCompositionCreation(proxyComposition)
-                .addCompositionCreation(proxyComposition)
-                .addOriginalVersionCreation(originalVersion)
-                .addOriginalVersionCreation(originalVersion)
-                .addOriginalVersionCreation(originalVersion)
                 .addOriginalVersionCreation(originalVersion)
                 .build();
 
         ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
-
-        assertTrue(remoteContribution.isPresent());
-    }
-    /**
-     * Test save contribution with canonical composition different compositions.
-     *
-     * @throws IOException the io exception
-     */
-    @Test
-    @SuppressWarnings("unchecked")
-    public void testSaveContributionWithCompositionsCreationAndModification() throws IOException {
-        ehr = openEhrClient.ehrEndpoint().createEhr();
-        String compositionPrecedingVersionUid = getCompositionPrecedingVersionUid(ehr);
-
-        String contributionModificationJson =
-                IOUtils.toString(ONE_ENTRY_COMPOSITION_MODIFICATION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDto =
-                new CanonicalJson().unmarshal(contributionModificationJson, ContributionCreateDto.class);
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion =
-                (OriginalVersion<LinkedHashMap<String, Object>>)
-                        contributionDto.getVersions().get(0);
-
-        String contributionJson =
-                IOUtils.toString(ONE_ENTRY_COMPOSITION_MODIFICATION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDtoCreation =
-                new CanonicalJson().unmarshal(contributionJson, ContributionCreateDto.class);
-
-        AuditDetails compositionModificationAudit =
-                contributionDto.getVersions().get(0).getCommitAudit();
-        originalVersion.setCommitAudit(compositionModificationAudit);
-
-        Unflattener cut = new Unflattener(new TestDataTemplateProvider());
-
-        ProxyEhrbaseBloodPressureSimpleDeV0Composition proxyDto = buildProxyEhrbaseBloodPressureSimpleDeV0Composition();
-
-        Composition proxyComposition = (Composition) cut.unflatten(proxyDto);
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(contributionDtoCreation.getAudit())
-                .addCompositionCreation(proxyComposition)
-                .addOriginalVersionModification(originalVersion, compositionPrecedingVersionUid)
-                .build();
-
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-
-        assertThat(versionUid.getVersion()).isEqualTo(1L);
-
+        VersionUid versionUid = contributionEndpoint.mergeContributionEntity(contributionBuilder.getContribution());
         Optional<Contribution> remoteContribution = contributionEndpoint.find(ehr, versionUid.getUuid());
 
         assertTrue(remoteContribution.isPresent());
     }
 
-    /**
-     * Gets contribution composition modified.
-     *
-     * @param ehr the ehr
-     * @return the contribution composition modified
-     * @throws IOException the io exception
-     */
     @SuppressWarnings("unchecked")
-    public String getContributionCompositionModified(UUID ehr) throws IOException {
-        String compositionPrecedingVersionUid = getCompositionPrecedingVersionUid(ehr);
+    private static void changeToLatestCompositionVersion(
+            LinkedHashMap<String, Object> composition, Contribution contribution) {
+        String compositionPrecedingVersionUid =
+                contribution.getVersions().get(0).getId().getValue();
+        ((LinkedHashMap<String, Object>) composition.get("uid")).put("value", compositionPrecedingVersionUid);
+    }
 
+    private static long getContributionVersion(VersionUid versionUid) {
+        return versionUid.getVersion();
+    }
+
+    private static String getCompositionVersion(Contribution remoteContribution) {
+        String compositionId = remoteContribution.getVersions().get(0).getId().getValue();
+
+        return compositionId.substring(compositionId.lastIndexOf("::") + 2);
+    }
+
+    private static AuditDetails createAuditDetails() throws IOException {
         String contributionModificationJson =
                 IOUtils.toString(ONE_ENTRY_COMPOSITION_MODIFICATION_LATEST.getStream(), StandardCharsets.UTF_8);
         ContributionCreateDto contributionDto =
                 new CanonicalJson().unmarshal(contributionModificationJson, ContributionCreateDto.class);
-        OriginalVersion<LinkedHashMap<String, Object>> originalVersion =
-                (OriginalVersion<LinkedHashMap<String, Object>>)
-                        contributionDto.getVersions().get(0);
 
-        LinkedHashMap<String, Object> composition = originalVersion.getData();
-
-        AuditDetails compositionModificationAudit =
-                contributionDto.getVersions().get(0).getCommitAudit();
-
-        ContributionBuilder contributionBuilder = ContributionBuilder.builder(compositionModificationAudit)
-                .addCompositionModification(composition, compositionPrecedingVersionUid)
-                .build();
-
-        ContributionEndpoint contributionEndpoint = openEhrClient.contributionEndpoint(this.ehr);
-        VersionUid versionUid =
-                contributionEndpoint.mergeContributionEntity(contributionBuilder.getContributionCreateDto());
-
-        assertThat(versionUid.getVersion()).isEqualTo(1L);
-
-        Optional<Contribution> remoteContribution = contributionEndpoint.find(this.ehr, versionUid.getUuid());
-
-        assertTrue(remoteContribution.isPresent());
-
-        String version = remoteContribution.get().getVersions().get(0).getId().getValue();
-        String updatedVersion = version.substring(version.lastIndexOf("::") + 2);
-
-        assertEquals("2", updatedVersion);
-
-        return version;
+        return contributionDto.getVersions().get(0).getCommitAudit();
     }
 
-    private String getCompositionPrecedingVersionUid(UUID ehr) throws IOException {
+    private MinimalEvaluationEnV1Composition mergeMinimalEvaluationEnV1Composition() throws IOException {
         aComposition = new CanonicalJson()
                 .unmarshal(
                         IOUtils.toString(
@@ -418,12 +483,13 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
         MinimalEvaluationEnV1Composition minimalEvaluationEnV1Composition =
                 flattener.flatten(aComposition, MinimalEvaluationEnV1Composition.class);
 
-        MinimalEvaluationEnV1Composition comp =
-                openEhrClient.compositionEndpoint(ehr).mergeCompositionEntity(minimalEvaluationEnV1Composition);
+        return openEhrClient.compositionEndpoint(ehr).mergeCompositionEntity(minimalEvaluationEnV1Composition);
+    }
 
-        assertThat(comp.getVersionUid()).isNotNull();
+    private static LinkedHashMap<String, Object> getCanonicalComposition(RMObject composition) {
+        String compositionJson = new CanonicalJson().marshal(composition);
 
-        return comp.getVersionUid().toString();
+        return (LinkedHashMap<String, Object>) new CanonicalJson().unmarshalToMap(compositionJson);
     }
 
     private static ContributionCreateDto createContributionWithEhrStatus(EhrStatus ehrStatus) throws IOException {
@@ -437,14 +503,5 @@ public class DefaultRestContributionEndpointIT extends CanonicalCompoAllTypeQuer
                 .setValue(ehrStatus.getUid().getValue());
 
         return contributionDto;
-    }
-
-    private static AuditDetails getAuditDetails() throws IOException {
-        String contributionCreateJson =
-                IOUtils.toString(ONE_ENTRY_COMPOSITION_LATEST.getStream(), StandardCharsets.UTF_8);
-        ContributionCreateDto contributionDto =
-                new CanonicalJson().unmarshal(contributionCreateJson, ContributionCreateDto.class);
-
-        return contributionDto.getVersions().get(0).getCommitAudit();
     }
 }
